namespaces/live.cloud-platform.service.justice.gov.uk/laa-ccms-staging-api-production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-ccms-staging-api-production"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "production"
    component: allow-laa-ccms-rest-api-production
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-ccms-staging-api-admin"
    cloud-platform.justice.gov.uk/application: "CCMS Staging API"
    cloud-platform.justice.gov.uk/owner: "laa-ccms-staging-api-admin: rajinder.singh@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-ccms-staging-rest-api"
    cloud-platform.justice.gov.uk/team-name: "laa-ccms-staging-api-admin"
    cloud-platform.justice.gov.uk/review-after: ""
